# PyPi

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/pipey_rl/: __init__.py  qlearn.py
