[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pipey-rl"
version = "0.1.0"
description = "Tiny RL utilities: a minimal, well-documented Q-learning update (with optional Pipey wrapper)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["reinforcement-learning", "q-learning", "rl", "pipey"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.21"
]

[project.optional-dependencies]
pipey = ["pipey>=0.1"]  # optional; install with: pip install pipey-rl[pipey]

[project.urls]
Homepage = "https://github.com/yourname/pipey-rl"
Issues = "https://github.com/yourname/pipey-rl/issues"